--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -20,7 +20,7 @@ import GameJamFaq from "../components/GameJamFaq";
             <div class="flex flex-col-reverse xl:flex-row items-start justify-between">
                 <div class="flex flex-col grow">
                     <h1 class="text-5xl font-bold mb-4">Game Jam 2025</h1>
-                    <div class="text-xl grid grid-cols-[auto_1fr] gap-x-2 gap-y-3 grid-rows-2">
+                    <div class="text-xl grid grid-cols-[auto_1fr] gap-x-2 gap-y-3 grid-rows-2 items-start">
                         <strong class="icon-text"><FaRegClock />When: </strong>
                         <span>September 22 to October 13</span>
                         <strong class="icon-text"><LuCherry />Theme: </strong>
