--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -15,7 +15,7 @@ import GameJamFaq from "../components/GameJamFaq";
 
 <Base title="Game Jam 2025 | Woodlands Computer Science" description="Woodlands CS 2025 game jam, from September 16 to October 13.">
     <Nav client:load active="/game-jam" />
-    <main class=`h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4` >
+    <main class=`h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4 min-w-0` >
         <Pane>
             <div class="flex flex-col-reverse xl:flex-row items-start justify-between">
                 <div class="flex flex-col grow">
