--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ Join us weekly for lessons, workshops, and contests.
 ---
 <Base title="Woodlands Computer Science" description={desc}>
     <HomeNav client:load />
-    <main class=`h-full min-w-0 max-w-full w-7xl flex flex-col lg:mr-4 gap-4` >
+    <main class="h-full min-w-0 max-w-full w-7xl flex flex-col lg:mr-4 gap-4" >
         <Pane>
             <h1 class="text-4xl font-bold mb-4" id="home">Woodlands CS is back for 2025</h1>
             <div class="flex flex-col gap-4 items-start max-w-3xl">
