--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -7,6 +7,7 @@ import TableOfContents, { type Heading } from "../components/TableOfContents";
 import {FaAngleLeft} from "react-icons/fa6";
 import Nav from "../components/Nav";
 import InterceptExternalLinks from "../components/InterceptExternalLinks";
+import Time from "../components/Time";
 const { frontmatter, headings } = Astro.props;
 const date = new Date(frontmatter.date);
 
@@ -36,16 +37,14 @@ const toc = buildTOC(headings);
 <Base title={frontmatter.title} description={frontmatter.description} >
     <InterceptExternalLinks client:load />
     <Nav client:load active="/posts" />
-    <main class="h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4 min-w-0 overflow-x-auto" >
+    <main class="p-4 pt-0 lg:pt-4 h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4 min-w-0 overflow-x-auto" >
         <div class={"mx-auto flex flex-col gap-4 blog-post max-w-full " + (frontmatter.slides ? "w-full" : "w-3xl")}>
             <Pane>
-                <a href="/posts/" class="btn p-0 icon-text mb-4"><FaAngleLeft/> Back</a>
+                <a href="/posts/" class="btn p-0 icon-text mb-4"><FaAngleLeft/>All Posts</a>
                 <article class="overflow-x-auto">
                     <h1>{frontmatter.title}</h1>
                     <p>
-                        {isValid(date) && <time datetime={frontmatter.date}>
-                            {formatDate(date, "MMMM d, yyyy")}
-                        </time>}
+                        {isValid(date) && <Time dateTime={date} format="dd MMMM yyyy" />}
                     </p>
                     <hr />
                     {frontmatter.slides &&
