--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -12,7 +12,7 @@ const posts = (await getCollection('posts')).sort(
 ---
 <Base title="Meeting Notes | Woodlands Computer Science" description="Woodlands CS Blog and meeting note repository." >
     <Nav client:load active="/posts" />
-    <main class=`h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4` >
+    <main class="p-4 pt-0 lg:pt-4  md:mx-0 h-full flex flex-col w-7xl max-w-full gap-4">
         <div class="max-w-3xl w-full mx-auto flex flex-col gap-4 blog-post">
             <Pane>
                 <h1 class="text-4xl">Meeting Notes</h1>
@@ -25,7 +25,7 @@ const posts = (await getCollection('posts')).sort(
                         <time datetime={formatISO(post.data.date)} class="text-foreground-dimmed">
                             {formatDate(post.data.date, "d MMMM yyyy")}
                         </time>
-                        <p>{post.data.description}</p>
+                        <p class="font-sans font-normal">{post.data.description}</p>
                     </li>)}
                 </ul>
             </Pane>
