--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -15,12 +15,12 @@ import GameJamFaq from "../components/GameJamFaq";
 
 <Base title="Game Jam 2025 | Woodlands Computer Science" description="Woodlands CS 2025 game jam, from September 16 to October 13.">
     <Nav client:load active="/game-jam" />
-    <main class=`h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4 min-w-0` >
+    <main class="p-4 pt-0 lg:pt-4 h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4 min-w-0">
         <Pane>
             <div class="flex flex-col-reverse xl:flex-row items-start justify-between">
-                <div class="flex flex-col grow">
+                <div class="flex flex-col flex-1">
                     <h1 class="text-5xl font-bold mb-4">Game Jam 2025</h1>
-                    <div class="text-xl grid grid-cols-[auto_1fr] gap-x-2 gap-y-3 grid-rows-2 items-start">
+                    <div class="text-xl grid grid-cols-[auto_1fr] gap-x-2 gap-y-3 items-start">
                         <strong class="icon-text"><FaRegClock />When: </strong>
                         <span>September 22 to October 13</span>
                         <strong class="icon-text"><LuCherry />Theme: </strong>
@@ -49,7 +49,7 @@ import GameJamFaq from "../components/GameJamFaq";
                     <h2 class="text-3xl font-bold mb-4">FAQ</h2>
                     <GameJamFaq client:load />
                 </div>
-                <div class="w-auto flex flex-col sm:w-xl lg:w-auto sm:flex-row xl:flex-col gap-8 xl:sticky xl:top-8 xl:max-w-3/7 mb-8 xl:my-0 xl:mx-8">
+                <div class="xl:max-w-3/7 flex flex-col sm:max-w-3xl lg:w-full sm:flex-row xl:flex-col gap-8 xl:sticky xl:top-8 mb-8 xl:my-0 xl:mx-8">
                     <Image alt="Game jam poster" src={gameJamPoster} class="max-w-full sm:max-w-1/2 xl:max-w-full" />
                     <GameJamCountdown client:load />
                 </div>
