--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ Join us weekly for lessons, workshops, and contests.
 ---
 <Base title="Woodlands Computer Science" description={desc}>
     <HomeNav client:load />
-    <main class="h-full min-w-0 max-w-full w-7xl flex flex-col lg:mr-4 gap-4" >
+    <main class="p-4 pt-0 lg:pt-4 h-full min-w-0 max-w-full w-7xl flex flex-col lg:mr-4 gap-4" >
         <Pane>
             <h1 class="text-4xl font-bold mb-4" id="home">Woodlands CS is back for 2025</h1>
             <div class="flex flex-col gap-4 items-start max-w-3xl">
@@ -44,17 +44,26 @@ Join us weekly for lessons, workshops, and contests.
                 </ul>
                 <p>Beginning programmers or those interested in CS are encouraged to attend!</p>
                 <div class="flex gap-4 items-start mt-4 max-w-full flex-wrap">
-                    <a href="#calendar" class="btn bg-brand text-white font-bold">See What's Happening <FaAngleRight /></a>
+                    <a href="#calendar" class="btn bg-brand text-white font-semibold">See What's Happening <FaAngleRight /></a>
                 </div>
             </div>
             <hr class="my-8"/>
             <h2 class="text-3xl font-bold mb-4">Latest Updates</h2>
             <div class="flex flex-col gap-4 items-start">
                 <NewsBar client:load className="my-4">
-                    {posts.map(p => <NewsItem href={"/posts/" + p.id}>
-                        <h3 class="text-lg text-foreground-bright font-bold line-clamp-2">{p.data.title}</h2>
-                        <Time dateTime={p.data.date} format='dd MMMM yyyy' className="text-ellipsis" />
-                        <p class="mt-4 text-pretty overflow-ellipsis max-h-full line-clamp-6">{p.data.description}</p>
+                    {posts.map((p, idx) => <NewsItem href={"/posts/" + p.id}>
+                        {p.data.image ?
+                            <div class="w-full img-shadow-b relative">
+                                <Image priority={idx <= 4} src={p.data.image} alt={p.data.title} class="w-full aspect-video object-cover"/>
+                                <h3 class="text-lg/6 text-foreground-bright font-bold line-clamp-2 w-full h-16 absolute px-4 left-0 -bottom-2.75">{p.data.title}</h2>
+                            </div> 
+                            :
+                            <h3 class="text-lg text-foreground-bright font-bold line-clamp-2 w-full h-16 px-4 py-2">{p.data.title}</h2>
+                        }
+                        <article class="p-4 pt-2">
+                            <Time dateTime={p.data.date} format='dd MMMM yyyy' className="text-ellipsis" />
+                            <p class="mt-2 text-pretty overflow-ellipsis max-h-full line-clamp-6 z-1">{p.data.description}</p>
+                        </article>
                     </NewsItem>)}
                 </NewsBar>
                 <a href="/posts" class="text-center mx-auto icon-text">View all <FaAngleRight /></a>
