Fix heading overflow

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ Join us weekly for lessons, workshops, and contests.
                         {p.data.image ?
                             <div class="w-full img-shadow-b relative">
                                 <Image priority={idx <= 4} src={p.data.image} alt={p.data.title} class="w-full aspect-video object-cover"/>
-                                <h3 class="text-lg/6 text-foreground-bright font-bold line-clamp-2 w-full h-16 absolute px-4 left-0 -bottom-2.75">{p.data.title}</h2>
+                                <h3 class="text-lg/6 text-foreground-bright font-bold line-clamp-2 absolute mx-4 left-0 bottom-1">{p.data.title}</h2>
                             </div> 
                             :
                             <h3 class="text-lg text-foreground-bright font-bold line-clamp-2 w-full h-16 px-4 py-2">{p.data.title}</h2>
