--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ Join us weekly for lessons, workshops, and contests.
             <hr class="my-8"/>
             <h2 class="text-3xl font-bold mb-4">Latest Updates</h2>
             <div class="flex flex-col gap-4 items-start">
-                <NewsBar client:load className="my-4">
+                <NewsBar client:load>
                     {posts.map((p, idx) => <NewsItem href={"/posts/" + p.id}>
                         {p.data.image ?
                             <div class="w-full img-shadow-b relative">
