--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ Join us weekly for lessons, workshops, and contests.
                     {posts.map((p, idx) => <NewsItem href={"/posts/" + p.id}>
                         {p.data.image ?
                             <div class="w-full img-shadow-b relative">
-                                <Image priority={idx <= 4} src={p.data.image} alt={p.data.title} class="w-full aspect-video object-cover"/>
+                                <Image priority={idx < 4} src={p.data.image} alt={p.data.title} class="w-full aspect-video object-cover"/>
                                 <h3 class="text-lg/6 text-foreground-bright font-bold line-clamp-2 absolute mx-4 left-0 bottom-1">{p.data.title}</h2>
                             </div> 
                             :
