--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,7 +81,7 @@ Join us weekly for lessons, workshops, and contests.
                         <a href="/game-jam" class="btn border-2">Details <FaAngleRight /></a>
                     </div>
                     <hr  class="my-8"/>
-                    <div class="flex flex-col gap-4">
+                    <div class="flex flex-col gap-4 max-w-xl">
                         <h2 class="text-3xl font-bold" id="calendar">Calendar</h2>
                         <Meetings client:load showNextMeeting />
                     </div>
