--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -48,7 +48,7 @@ const toc = buildTOC(headings);
                     </p>
                     <hr />
                     {frontmatter.slides &&
-                            <span class="text-yellow-300 my-8 italic">This content may require a PDSB account.</span>
+                            <p class="text-yellow-300 my-4 italic">This content may require a PDSB account.</p>
                     }
                     {!frontmatter.slides &&
                         <nav class="mt-4 mb-8  ml-4 rounded-2xl p-4 border-1 toc border-neutral-700 max-w-sm">
