Better center the nav button

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -75,8 +75,8 @@ Join us weekly for lessons, workshops, and contests.
                         <h2 class="text-3xl font-bold" id="game-jam">Game Jam 2025</h2>
                         <p>This month, we're once again hosting our annual game jam! The theme this year is <strong>Comes in Pairs</strong>.</p>
                         <p>Are you passionate about art, modeling, music, or coding? Have you always wanted to make a game of your very own?
-                            Come join us in Room 100, where we'll teach you how to use the <strong>Godot Game Engine</strong>
-                            &mdash;&mdash;no technical or gamedev experience necessary.</p>
+                            Come join us in Room 100, where we'll teach you how to use the <strong>Godot Game Engine</strong>&mdash;&mdash;no
+                            technical or gamedev experience necessary.</p>
                         <p class="text-foreground-dimmed text-sm"><i>Submissions are due on October 13.</i></p>
                         <a href="/game-jam" class="btn border-2">Details <FaAngleRight /></a>
                     </div>
