--- a/src/pages/game-jam.astro
+++ b/src/pages/game-jam.astro
@@ -17,7 +17,7 @@ import GameJamFaq from "../components/GameJamFaq";
     <Nav client:load active="/game-jam" />
     <main class="p-4 pt-0 lg:pt-4 h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4 min-w-0">
         <Pane>
-            <div class="flex flex-col-reverse xl:flex-row items-start justify-between">
+            <div class="flex flex-col-reverse xl:flex-row items-start justify-between p-5">
                 <div class="flex flex-col flex-1">
                     <h1 class="text-5xl font-bold mb-4">Game Jam 2025</h1>
                     <div class="text-xl grid grid-cols-[auto_1fr] gap-x-2 gap-y-3 items-start">
