--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -15,21 +15,22 @@ const posts = (await getCollection('posts')).sort(
     <main class="p-4 pt-0 lg:pt-4  md:mx-0 h-full flex flex-col w-7xl max-w-full gap-4">
         <div class="max-w-3xl w-full mx-auto flex flex-col gap-4 blog-post">
             <Pane>
-                <h1 class="text-4xl">Meeting Notes</h1>
-                <p class="mb-8">Club updates, meeting notes, and resources will be posted here.</p>
-                <hr class="my-8" />
-                <h2>Latest Posts</h2>
-                <ul class="list-none p-0 m-0 max-w-xl">
-                    {posts.map((post) => <li class="ps-0 mb-16">
-                        <h3><a href={"/posts/" + post.id}>{post.data.title}</a></h3>
-                        <time datetime={formatISO(post.data.date)} class="text-foreground-dimmed">
-                            {formatDate(post.data.date, "d MMMM yyyy")}
-                        </time>
-                        <p class="text-pretty">{post.data.description}</p>
-                    </li>)}
-                </ul>
+                <div class="p-5">
+                    <h1 class="text-4xl">Meeting Notes</h1>
+                    <p class="mb-8">Club updates, meeting notes, and resources will be posted here.</p>
+                    <hr class="my-8" />
+                    <h2>Latest Posts</h2>
+                    <ul class="list-none p-0 m-0 max-w-xl">
+                        {posts.map((post) => <li class="ps-0 mb-16">
+                            <h3><a href={"/posts/" + post.id}>{post.data.title}</a></h3>
+                            <time datetime={formatISO(post.data.date)} class="text-foreground-dimmed">
+                                {formatDate(post.data.date, "d MMMM yyyy")}
+                            </time>
+                            <p class="text-pretty">{post.data.description}</p>
+                        </li>)}
+                    </ul>
+                </div>
             </Pane>
-
             <Footer />
         </div>
     </main>
