Add game jam week 3

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ Join us weekly for lessons, workshops, and contests.
                             <h3 class="text-lg text-foreground-bright font-bold line-clamp-2 w-full h-16 px-4 py-2">{p.data.title}</h2>
                         }
                         <article class="p-4 pt-2">
-                            <Time dateTime={p.data.date} format='dd MMMM yyyy' className="text-ellipsis" />
+                            <Time dateTime={p.data.date} format='d MMMM yyyy' className="text-ellipsis" />
                             <p class="mt-2 text-pretty overflow-ellipsis max-h-full line-clamp-6 z-1">{p.data.description}</p>
                         </article>
                     </NewsItem>)}
