--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -40,7 +40,7 @@ const toc = buildTOC(headings);
     <main class="p-4 pt-0 lg:pt-4 h-full flex flex-col w-7xl max-w-full lg:mr-4 gap-4 min-w-0 overflow-x-auto" >
         <div class={"mx-auto flex flex-col gap-4 blog-post max-w-full " + (frontmatter.slides ? "w-full" : "w-3xl")}>
             <Pane>
-                <a href="/posts/" class="btn p-0 icon-text mb-4 ml-5"><FaAngleLeft/>All Posts</a>
+                <a href="/posts/" class="p-0 icon-text text-foreground no-underline mb-4 ml-5"><FaAngleLeft/>All Posts</a>
                 <article class="max-w-full p-5">
                     <h1>{frontmatter.title}</h1>
                     <p>
