--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ Join us weekly for lessons, workshops, and contests.
                             Come join us in Room 100, where we'll teach you how to use the <strong>Godot Game Engine</strong>&mdash;&mdash;no
                             technical or gamedev experience necessary.</p>
                         <p class="text-foreground-dimmed text-sm"><i>Submissions are due on October 13.</i></p>
-                        <a href="/game-jam" class="btn border-2">Details <FaAngleRight /></a>
+                        <a href="/game-jam" class="btn" role="button">Details <FaAngleRight /></a>
                     </div> 
                     <hr class="my-8" />
                     <div class="flex flex-col gap-4 max-w-xl">
